Use px instead of ch to prevent width jump on web font load

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -96,7 +96,7 @@ blockquote {
 
 .container {
   margin: 0 auto;
-  max-width: 75ch;
+  max-width: 600px;
   padding: 0 1em;
 }
 
